# to-webp

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  development-report.md  development-workflow.md  format.sh  push_to_dockerhub.sh  rust-check
k8s/: README.md  create_namespace.yaml  deployment.yaml  ingress.yaml  service.yaml
src/: main.rs  tests.rs
tests/: README.md  service-nodeport.yaml  test-pod.yaml
