[package]
name = "to-webp"
version = "0.1.0"
edition = "2021"
description = "ロスレスWebP変換API"
authors = ["tororomeshi"]

[dependencies]
actix-web = "4.5"
actix-cors = "0.6"
actix-multipart = "0.6"
futures = "0.3"
image = "0.24"
webp = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
mime = "0.3"
thiserror = "1.0"
bytes = "1.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"